alterando informações do banco de dados e adicionando permissao para troca de foto de usuario

--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
-DB_DATABASE='aquatech'
+DB_DATABASE='OpenBook'
 DB_USER='root'
 DB_PASSWORD='Lqsym@2020'
 DB_PORT=3306
