--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 AMBIENTE_PROCESSO=producao
 
 # Configurações de conexão com o banco de dados
-DB_HOST='seusDadosAqui'
-DB_DATABASE='seusDadosAqui'
-DB_USER='seusDadosAqui'
-DB_PASSWORD='seusDadosAqui'
-DB_PORT='seusDadosAqui'
+DB_HOST='localhost'
+DB_DATABASE='OpenBook'
+DB_USER='aluno'
+DB_PASSWORD=''
+DB_PORT='3007'
 
 # Configurações do servidor de aplicação
-APP_PORT=8080
+APP_PORT=3334
 APP_HOST=localhost
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
