--- a/.env
+++ b/.env
@@ -4,11 +4,11 @@ AMBIENTE_PROCESSO=producao
 DB_HOST='localhost'
 DB_DATABASE='OpenBook'
 DB_USER='aluno'
-DB_PASSWORD=''
-DB_PORT='3007'
+DB_PASSWORD='Sptech#2024'
+DB_PORT='3307'
 
 # Configurações do servidor de aplicação
-APP_PORT=3334
+APP_PORT=8080
 APP_HOST=localhost
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
